--- a/src/routes/login/login.module.css
+++ b/src/routes/login/login.module.css
@@ -1,4 +1,4 @@
-main {
+main.loginpage {
 
     width: 100%; height: 100vh;
 
@@ -8,7 +8,7 @@ main {
 
 }
 
-main .logo {
+main.loginpage .logo {
 
     width: 100%; height: fit-content;
 
@@ -16,13 +16,13 @@ main .logo {
    
 }
 
-main .logo img {
+main.loginpage .logo img {
 
    width: 25%; object-fit: contain;
    
 }
 
-main section {
+main.loginpage section {
 
     width: 100%; flex-grow: 1; 
 
@@ -31,7 +31,7 @@ main section {
     align-items: center; justify-content: start;
 }
 
-main section form {
+main.loginpage section form {
 
     width: 60%; height: 80%;
 
@@ -44,7 +44,7 @@ main section form {
     box-shadow: 1rem 1rem 1rem rgba(0, 0, 0, 0.3), -1rem -1rem 2rem rgba(140, 204, 207, 0.429);
 }
 
-main section form label {
+main.loginpage section form label {
 
     width: 90%; height: 4rem;
     
@@ -54,7 +54,7 @@ main section form label {
 
 }
 
-main section form label input {
+main.loginpage section form label input {
 
     width: 70%; height: 3rem;
 
@@ -65,7 +65,7 @@ main section form label input {
     padding: 0 1rem; margin-left: 1rem;
 }
 
-main section form input[type=submit] {
+main.loginpage section form input[type=submit] {
 
     width: 80%; height: 3rem;
 
@@ -76,50 +76,72 @@ main section form input[type=submit] {
     color: white; transition: 0.3s;
 }
 
-main section form input[type=submit]:hover {
+main.loginpage section form input[type=submit]:hover {
 
     background: rgb(0, 65, 176);
 }
 
 
-main section .message_popup {
+div.black_background_image {                                        /*message style*/
 
-    position: fixed; top: 0;
+    background-color: rgba(0, 0, 0, 0.2);
 
-    left: 0;  width: 100%;
+    box-shadow: inset 0 0 1rem rgba(0, 0, 0, 0.2);
 
-    height: 100%; background-color: rgba(0, 0, 0, 0.4);
+    position: fixed; top: 0; left: 0;
+
+    width: 100vw; height: 100vh;
 
     display: grid; place-items: center;
 }
 
-main section .message_popup p {
+div.black_background_image article {
 
-    width: 40%; height: 5rem;
+    width: 40%; height: fit-content;
 
-    text-align: center; line-height: 5rem;
+    padding: 2rem 0.5rem; display: flex;
 
-    background-color: rgb(20, 20, 20); color: rgb(226, 125, 0);
+    flex-direction: column; align-items: center;
 
-    border-radius: 4px;
+    background-color: white; border-radius: 8px;
+
+    user-select: none;
+
+}
+
+div.black_background_image article > * {
+
+    margin: 1rem 0;
+}
+
+div.black_background_image article h1 {
+
+    font-size: 16pt; color: black;
+}
+
+div.black_background_image article p {
+
+    width: 90%; height: fit-content;
+
+    text-align: center;
 }
 
 
 /* mobile version */
 
 @media (max-width: 650px) {
-    main .logo img {
+    main.loginpage .logo img {
 
         width: 80%; object-fit: contain;
         
     }
 
-    main section form {
+    main.loginpage section form {
 
         width: 95%; 
     }
 
-    main section form label {
+    main.loginpage section form label {
 
         flex-direction: column; align-items: center;
     
@@ -129,13 +151,13 @@ main section .message_popup p {
 }
 
 @media (max-width: 800px) {
-    main .logo img {
+    main.loginpage .logo img {
 
         width: 40%; object-fit: contain;
         
     }
 
-    main section form {
+    main.loginpage section form {
 
         width: 85%; 
     }
