--- a/src/routes/menu/menu.module.css
+++ b/src/routes/menu/menu.module.css
@@ -1,4 +1,4 @@
-main {
+main.menupage {
     display: flex; flex-direction: column;
 
     align-items: center; justify-content: space-around;
@@ -6,7 +6,7 @@ main {
     width: 100%; height: 100vh;
 }
 
-main header {
+main.menupage  header {
 
     height: fit-content; width: 100%;
 
@@ -17,7 +17,7 @@ main header {
     box-sizing: border-box; padding: 1rem 1rem 0 1rem;
 }
 
-main .logo {
+main.menupage  .logo {
 
     width: 100%; height: fit-content;
 
@@ -25,7 +25,7 @@ main .logo {
    
 }
 
-main .logo img {
+main.menupage  .logo img {
 
    width: 30%; object-fit: contain;
    
@@ -64,7 +64,7 @@ main .logo img {
         width: 90%; 
     }
 
-    main .logo img {
+    main.menupage .logo img {
 
         width: 50%;
         
